# parkcam

./: Makefile  README.md  README_PARKCAM.md  capture_1fps  capture_1fps.cpp  parkcam  parkcam.conf  parkcam.cpp  parkcam.service  parkcam_alpr.py  parkcam_db.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/parkcam/: alpr.py  camera.py  main.py  utils.py
src/scripts/: fast-alpr.py
tests/: test_basic.py
