[tool.poetry]
name = "parkcam"
version = "0.1.0"
description = "A project for capturing images and recognizing license plates using camera."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fast-alpr = "^1.0.0"  # Adjust version as necessary

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"